Fixed library header tab overlap

--- a/fullscreen/fullscreenspotlight.css
+++ b/fullscreen/fullscreenspotlight.css
@@ -1,4 +1,4 @@
-.layout-desktop .libraryPage:not(.noSecondaryNavPage) {  padding-top: 0em !important;}
+.layout-desktop .page.homePage.libraryPage.allLibraryPage.backdropPage.pageWithAbsoluteTabs.withTabs.mainAnimatedPage { margin-top:-4.5em;}
 .layout-desktop .overflowBackdropCard, .overflowSmallBackdropCard {  width: 12.7vw !important;  padding-right: 1.85em;}
 .layout-desktop .skinHeader-withBackground {background-color: transparent; backdrop-filter: blur(0px);}
 .layout-desktop #homeTab .section0 .sectionTitle.sectionTitle-cards.padded-left {  display: flex !important; } 
